[package]
authors = [
    "Andrei Gherghescu <andrei-ng@protonmail.com>",
    "Lane Kolbly <lane@rscheme.org>",
]
description = "A crate to communicate with u-blox GPS devices using the UBX protocol"
edition = "2021"
license = "MIT"
name = "ublox"
publish = false
readme = "../README.md"
repository = "https://github.com/lkolbly/ublox"
version = "0.0.1"

[features]
ubx_series8 = []
ubx_series9 = []
default = ["std", "serde", "ubx_series8"]

alloc = []
std = []


[dependencies]
bitflags = "2.3"
chrono = { version = "0.4", default-features = false, features = [] }
num-traits = { version = "0.2", default-features = false }
serde = { version = "1.0", optional = true, default-features = false, features = [
    "derive",
] }
ublox_derive = { path = "../ublox_derive", version = "=0.0.1" }

[dev-dependencies]
cpu-time = "1.0"
cpuprofiler = "0.0"
criterion = "0.5"
rand = "0.8"
serde_json = "1.0"

[[bench]]
harness = false
name = "packet_benchmark"
