[package]
authors = [
    "Lane Kolbly <lane@rscheme.org>",
    "Andrei Gherghescu <gandrein@pm.me>",
]
edition = "2021"
name = "example-basic-cli"
publish = false
version = "0.1.0"

[dependencies]
chrono = "0.4"
clap = { version = "4.2", features = ["cargo"] }
serde_json = "1.0"
serialport = "4.2"
ublox = { path = "../../ublox" }

[features]
alloc = ["ublox/alloc"]
