[package]
authors = [
    "Lane Kolbly <lane@rscheme.org>",
    "Andrei Gherghescu <gandrein@pm.me>",
]
edition = "2021"
name = "adr-status-messages"
publish = false
version = "0.0.1"

[dependencies]
chrono = "0.4"
clap = { version = "4.2", features = ["cargo"] }
serde_json = "1.0"
serialport = "4.2"
ublox = { path = "../../ublox" }

[features]
alloc = ["ublox/alloc"]
