[package]
authors = [
    "Lane Kolbly <lane@rscheme.org>",
    "Andrei Gherghescu <andrei-ng@protonmail.com>",
]
edition = "2021"
name = "basic-cli"
publish = false
rust-version = "1.70"
version = "0.1.0"

[dependencies]
chrono = "0.4"
clap = { version = "4.2", features = ["cargo"] }
serde_json = "1.0"
serialport = "4.2"
ublox = { path = "../../ublox" }

[features]
alloc = ["ublox/alloc"]
