[package]
authors = ["Andrei Gherghescu <andrei-ng@protonmail.com>"]
edition = "2021"
name = "dds"
publish = false
rust-version = "1.70"
version = "0.1.0"

[dependencies]
# ublox = { path = "../../ublox", default-features = true }
chrono = "0.4"
clap = { version = "4.2", features = ["cargo", "derive", "string"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.2"
rustdds = "0.11"
log = "0.4"
anyhow = "1.0"
rand = "0.9"
env_logger = "0.11"
futures = "0.3"
smol = { version = "2.0" }

[[bin]]
name = "dummy-publisher"
path = "src/dummy-publisher.rs"

[[bin]]
name = "subscriber"
path = "src/subscriber.rs"
